--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     body {
       font-family: Arial, sans-serif;
       padding: 10px;
-      color: gray
+      color: 66096a
     }
 
     .header-nav {
@@ -123,19 +123,17 @@
   </style>
 </head>
 <body>
+  
   <nav id="header-nav" class="navbar navbar=default">
-    <div> class="container"</div>
+    <div> class="container">
   <h1>The 3 boxes that are square</h1>
   <div class="container">
     <div class="navbar-header">
       <a href="index.html" class="pull-left visible-md visible-lg">
       </a>
   <div class="navbar-brand">
-    <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-    <p>
-      <img src="images/star-k-logo.png" alt="Kosher certification">
-      <span>Kosher Certified</span>
-    </p>
+    <a href="index.html"><h1>Navbar test</h1></a>
+
     
 
 
