--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body, ul, li, a, button {
 /* Dropdown Container */
 .dropdown-container {
     position: relative;
-    margin-left: 15px;
+    margin-left: autopx;
 }
 
 .dropdown-button {
@@ -186,21 +186,22 @@ body, ul, li, a, button {
   </style>
 </head>
 <body>
-    <header class="header">
-        <nav class="navbar">
-            <a href="#home" class="nav-link">Home</a>
-            <a href="#about" class="nav-link">About</a>
-            <div class="dropdown-container">
-                <button class="dropdown-button">Menu</button>
-                <ul class="dropdown-menu">
-                    <li><a href="#option1">Option 1</a></li>
-                    <li><a href="#option2">Option 2</a></li>
-                    <li><a href="#option3">Option 3</a></li>
-                </ul>
-            </div>
-            <a href="#contact" class="nav-link">Contact</a>
-        </nav>
-    </header>
+<header class="header">
+    <nav class="navbar">
+        <a href="#home" class="nav-link">Home</a>
+        <a href="#about" class="nav-link">About</a>
+        <a href="#contact" class="nav-link">Contact</a>
+        <div class="dropdown-container">
+            <button class="dropdown-button">Menu</button>
+            <ul class="dropdown-menu">
+                <li><a href="#option1">Option 1</a></li>
+                <li><a href="#option2">Option 2</a></li>
+                <li><a href="#option3">Option 3</a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
+
 
 
     
