--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, ul, li, a, button {
 .navbar {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding: 0 20px;
 }
 
@@ -50,7 +50,6 @@ body, ul, li, a, button {
 /* Dropdown Container */
 .dropdown-container {
     position: relative;
-    margin-left: autopx;
 }
 
 .dropdown-button {
