--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
         /* Navbar Brand */
         .navbar-brand {
             display: flex;
-            align-items: center;
-            text-align: center;
+            align-items: left;
+            text-align: left;
             padding: 0; /* Removes excess padding */
         }
 
         .navbar-brand h1 {
-            font-family: 'Lora', serif;
-            color: #557c3e;
+            font-family: Ariel;
             font-size: 1.5em;
             text-transform: uppercase;
             font-weight: bold;
@@ -130,8 +129,6 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <!-- Navbar Links -->
-            <a href="#home" class="nav-link">Home</a>
             
             <!-- Navbar Brand -->
             <div class="navbar-brand">
