--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
         .navbar-brand h1 {
             font-family: Ariel;
+            color: White;
             font-size: 1.5em;
             text-transform: uppercase;
             font-weight: bold;
@@ -124,6 +125,84 @@
         .dropdown-container:focus-within .dropdown-menu {
             display: block;
         }
+           .container {
+      width: 100%;
+    }
+
+    .section {
+      border: 1px solid black;
+      padding: 20px;
+      margin: 10px 0;
+      background-color: gray;
+      font-size: 18px;
+      position: relative;
+    }
+
+    .section-title-left {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: red;
+      font-size: 12px;
+      padding: 5px 10px;
+      border: 1px solid black;
+    }
+    .section-title-middle {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: green;
+      font-size: 12px;
+      padding: 5px 10px;
+      border: 1px solid black;
+    }
+    .section-title-right {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: blue;
+      font-size: 12px;
+      padding: 5px 10px;
+      border: 1px solid black;
+    }
+
+    /* Desktop view (992px and above) */
+    @media (min-width: 992px) {
+      .container {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .section {
+        width: 32%;
+        margin: 0;
+      }
+    }
+
+    /* Tablet view (768px to 991px) */
+    @media (min-width: 768px) and (max-width: 991px) {
+      .container {
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      .section {
+        width: 48%;
+        margin: 1%;
+      }
+
+      .section:nth-child(3) {
+        width: 100%;
+        margin: 10px 0;
+      }
+    }
+
+    /* Mobile view (767px and below) */
+    @media (max-width: 767px) {
+      .section {
+        width: 100%;
+      }
+    }
     </style>
 </head>
 <body>
