--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
 
             <!-- Dropdown Menu -->
             <div class="dropdown-container">
-                <button class="dropdown-button">Menu</button>
+                <button class="dropdown-button">Button</button>
                 <ul class="dropdown-menu">
-                    <li><a href="#option1">Option 1</a></li>
-                    <li><a href="#option2">Option 2</a></li>
-                    <li><a href="#option3">Option 3</a></li>
+                    <li><a href="#option1">Rectangle 1</a></li>
+                    <li><a href="#option2">Rectangle 2</a></li>
+                    <li><a href="#option3">Rectangle 3</a></li>
                 </ul>
             </div>
         </nav>
