--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <style>
-           /* General Reset */
+    /* General Reset */
     body, ul, li, a, button, h1 {
         margin: 0;
         padding: 0;
@@ -22,8 +22,8 @@
     /* Header Styles */
     .header {
         background-color: #333; /* Dark header background */
-        padding: 10px 0;
-        color: white;
+        padding: 0;
+        margin: 0;
     }
 
     /* Navbar Styles */
@@ -33,6 +33,7 @@
         justify-content: space-between;
         width: 100%;
         background-color: #444; /* Navbar background color */
+        padding: 10px 20px; /* Padding inside the navbar */
     }
 
     /* Navbar Links */
@@ -50,7 +51,7 @@
 
     /* Navbar Brand */
     .navbar-brand {
-        padding: 0 20px;
+        padding: 0;
     }
 
     .navbar-brand h1 {
@@ -71,7 +72,6 @@
     /* Dropdown Container */
     .dropdown-container {
         position: relative;
-        padding: 0 20px;
     }
 
     .dropdown-button {
@@ -128,7 +128,7 @@
     </style>
 </head>
 <body>
-    <header class="header">
+<header class="header">
     <nav class="navbar">
         <!-- Navbar Brand -->
         <div class="navbar-brand">
