--- a/index.html
+++ b/index.html
@@ -9,145 +9,238 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <style>
-    /* General Reset */
-    body, ul, li, a, button, h1 {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        text-decoration: none;
-        font-family: Arial, sans-serif;
-        box-sizing: border-box;
+        /* General Reset */
+        body, ul, li, a, button, h1 {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            text-decoration: none;
+            font-family: Arial, sans-serif;
+            box-sizing: border-box;
+        }
+
+        /* Header Styles */
+        .header {
+            background-color: #333; /* Dark header background */
+            padding: 10px 0;
+            color: white;
+        }
+
+        /* Navbar Styles */
+        .navbar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 20px;
+        }
+
+        /* Navbar Links */
+        .nav-link {
+            color: white;
+            padding: 10px 15px;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+        .nav-link:hover {
+            background-color: #444;
+            border-radius: 5px;
+        }
+
+        /* Navbar Brand */
+        .navbar-brand {
+            display: flex;
+            align-items: left;
+            text-align: left;
+            padding: 0; /* Removes excess padding */
+        }
+
+        .navbar-brand h1 {
+            font-family: Ariel;
+            color: White;
+            font-size: 1.5em;
+            text-transform: uppercase;
+            font-weight: bold;
+            text-shadow: 1px 1px 1px #222;
+            margin: 0;
+            line-height: 1;
+        }
+
+        .navbar-brand a:hover, .navbar-brand a:focus {
+            text-decoration: none;
+        }
+
+        /* Dropdown Container */
+        .dropdown-container {
+            position: relative;
+        }
+
+        .dropdown-button {
+            padding: 10px 15px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .dropdown-button:hover {
+            background-color: #0056b3;
+        }
+
+        /* Dropdown Menu */
+        .dropdown-menu {
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background-color: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+            display: none;
+            z-index: 1000;
+            min-width: 150px;
+        }
+
+        .dropdown-menu li {
+            border-bottom: 1px solid #ddd;
+        }
+
+        .dropdown-menu li:last-child {
+            border-bottom: none;
+        }
+
+        .dropdown-menu li a {
+            display: block;
+            padding: 10px 20px;
+            color: #333;
+        }
+
+        .dropdown-menu li a:hover {
+            background-color: #f1f1f1;
+        }
+
+        /* Show dropdown on focus */
+        .dropdown-container:focus-within .dropdown-menu {
+            display: block;
+        }
+           .container {
+      width: 100%;
     }
 
-    /* Header Styles */
-    .header {
-        background-color: #333; /* Dark header background */
-        padding: 0;
-        margin: 0;
+    .section {
+      border: 1px solid black;
+      padding: 20px;
+      margin: 10px 0;
+      background-color: gray;
+      font-size: 18px;
+      position: relative;
     }
 
-    /* Navbar Styles */
-    .navbar {
+    .section-title-left {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: red;
+      font-size: 12px;
+      padding: 5px 10px;
+      border: 1px solid black;
+    }
+    .section-title-middle {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: green;
+      font-size: 12px;
+      padding: 5px 10px;
+      border: 1px solid black;
+    }
+    .section-title-right {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: blue;
+      font-size: 12px;
+      padding: 5px 10px;
+      border: 1px solid black;
+    }
+
+    /* Desktop view (992px and above) */
+    @media (min-width: 992px) {
+      .container {
         display: flex;
-        align-items: center;
         justify-content: space-between;
-        width: 100%;
-        background-color: #444; /* Navbar background color */
-        padding: 10px 20px; /* Padding inside the navbar */
-    }
+      }
 
-    /* Navbar Links */
-    .nav-link {
-        color: white;
-        padding: 10px 15px;
-        text-decoration: none;
-        transition: background-color 0.3s;
-    }
-
-    .nav-link:hover {
-        background-color: #555;
-        border-radius: 5px;
-    }
-
-    /* Navbar Brand */
-    .navbar-brand {
-        padding: 0;
-    }
-
-    .navbar-brand h1 {
-        font-family: Arial, sans-serif;
-        color: white;
-        font-size: 1.5em;
-        text-transform: uppercase;
-        font-weight: bold;
-        text-shadow: 1px 1px 1px #222;
+      .section {
+        width: 32%;
         margin: 0;
-        line-height: 1;
+      }
     }
 
-    .navbar-brand a:hover, .navbar-brand a:focus {
-        text-decoration: none;
+    /* Tablet view (768px to 991px) */
+    @media (min-width: 768px) and (max-width: 991px) {
+      .container {
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      .section {
+        width: 48%;
+        margin: 1%;
+      }
+
+      .section:nth-child(3) {
+        width: 100%;
+        margin: 10px 0;
+      }
     }
 
-    /* Dropdown Container */
-    .dropdown-container {
-        position: relative;
+    /* Mobile view (767px and below) */
+    @media (max-width: 767px) {
+      .section {
+        width: 100%;
+      }
     }
-
-    .dropdown-button {
-        padding: 10px 15px;
-        background-color: #007BFF;
-        color: white;
-        border: none;
-        cursor: pointer;
-        font-size: 16px;
-        border-radius: 5px;
-        transition: background-color 0.3s;
-    }
-
-    .dropdown-button:hover {
-        background-color: #0056b3;
-    }
-
-    /* Dropdown Menu */
-    .dropdown-menu {
-        position: absolute;
-        top: 100%;
-        right: 0;
-        background-color: white;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        border-radius: 5px;
-        display: none;
-        z-index: 1000;
-        min-width: 150px;
-    }
-
-    .dropdown-menu li {
-        border-bottom: 1px solid #ddd;
-    }
-
-    .dropdown-menu li:last-child {
-        border-bottom: none;
-    }
-
-    .dropdown-menu li a {
-        display: block;
-        padding: 10px 20px;
-        color: #333;
-    }
-
-    .dropdown-menu li a:hover {
-        background-color: #f1f1f1;
-    }
-
-    /* Show dropdown on focus */
-    .dropdown-container:focus-within .dropdown-menu {
-        display: block;
-    }
-
     </style>
 </head>
 <body>
-<header class="header">
-    <nav class="navbar">
-        <!-- Navbar Brand -->
-        <div class="navbar-brand">
-            <a href="index.html">
-                <h1>Navbar Test</h1>
-            </a>
-        </div>
+    <header class="header">
+        <nav class="navbar">
+            
+            <!-- Navbar Brand -->
+            <div class="navbar-brand">
+                <a href="index.html">
+                    <h1>Navbar Test</h1>
+                </a>
+            </div>
 
-        <!-- Dropdown Menu -->
-        <div class="dropdown-container">
-            <button class="dropdown-button">Button</button>
-            <ul class="dropdown-menu">
-                <li><a href="#option1">Rectangle 1</a></li>
-                <li><a href="#option2">Rectangle 2</a></li>
-                <li><a href="#option3">Rectangle 3</a></li>
-            </ul>
+            <!-- Dropdown Menu -->
+            <div class="dropdown-container">
+                <button class="dropdown-button">Button</button>
+                <ul class="dropdown-menu">
+                    <li><a href="#option1">Rectangle 1</a></li>
+                    <li><a href="#option2">Rectangle 2</a></li>
+                    <li><a href="#option3">Rectangle 3</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container">
+        <div class="section">
+            <div class="section-title-left">Left Box</div>
+            <p>The left box, also known as the first box, is the box that is the opposite of the right box.</p>
         </div>
-    </nav>
-</header>
+        <div class="section">
+            <div class="section-title-middle">Middle Box</div>
+            <p>The Middle box is also the second box of the series of boxes on this website. It is primarily known for being the only box between two boxes and being the only second box.</p>
+        </div>
+        <div class="section">
+            <div class="section-title-right">Right Box</div>
+            <p>Being the last box in the series of boxes causes it to be the third box of the three. It is capable of becoming the big box when conditions are met.</p>
+        </div>
+    </div>
 </body>
 </html>
-
