--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
 
         /* Navbar Styles */
         .navbar {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 20px;
+            position: relative;
         }
 
         /* Navbar Links */
@@ -72,7 +69,7 @@
 
         /* Dropdown Container */
         .dropdown-container {
-            position: relative;
+            position: static;
         }
 
         .dropdown-button {
@@ -94,17 +91,20 @@
         .dropdown-menu {
             position: absolute;
             top: 100%;
+            left: 0;
             right: 0;
+            width: 100%;
             background-color: white;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
             display: none;
             z-index: 1000;
-            min-width: 150px;
+
         }
 
         .dropdown-menu li {
             border-bottom: 1px solid #ddd;
+            text-align: center;
+            padding: 10px 0;
         }
 
         .dropdown-menu li:last-child {
