--- a/index.html
+++ b/index.html
@@ -264,33 +264,18 @@
 
     <!-- Dropdown content sections -->
     <div id="content1" class="dropdown-content">
-        <h3>Rectangle 1 Content</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h3>Rectangle 1</h3>
+        <p>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</p>
     </div>
 
     <div id="content2" class="dropdown-content">
-        <h3>Rectangle 2 Content</h3>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h3>Rectangle 2</h3>
+        <p>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</p>
     </div>
 
     <div id="content3" class="dropdown-content">
         <h3>Rectangle 3 Content</h3>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-    </div>
-
-    <div class="container">
-        <div class="section">
-            <div class="section-title-left">Left Box</div>
-            <p>The left box, also known as the first box, is the box that is the opposite of the right box.</p>
-        </div>
-        <div class="section">
-            <div class="section-title-middle">Middle Box</div>
-            <p>The Middle box is also the second box of the series of boxes on this website. It is primarily known for being the only box between two boxes and being the only second box.</p>
-        </div>
-        <div class="section">
-            <div class="section-title-right">Right Box</div>
-            <p>Being the last box in the series of boxes causes it to be the third box of the three. It is capable of becoming the big box when conditions are met.</p>
-        </div>
+        <p>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</p>
     </div>
 </body>
 </html>
