--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         /* Content sections */
         .dropdown-content {
             padding: 20px;
-            background-color: #f9f9f9;
+            background-color: beb8b5;
             border-top: 1px solid #ddd;
         }
 
@@ -144,7 +144,7 @@
                 display: block !important;
                 margin: 20px 0;
                 padding: 20px;
-                background-color: beb8b5;
+                background-color: #beb8b5;
                 border: 1px solid #ddd;
                 border-radius: 5px;
             }
