--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <nav class="navbar">
             <div class="navbar-brand">
                 <a href="index.html">
-                    <h1>Navbar Test</h1>
+                    <h1>FOOD, LLC</h1>
                 </a>
             </div>
             <div class="dropdown-container">
