--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
             <div class="dropdown-container">
                 <button class="dropdown-button">Button</button>
                 <ul class="dropdown-menu">
-                    <li><a href="#content1">Rectangle 1</a></li>
-                    <li><a href="#content2">Rectangle 2</a></li>
-                    <li><a href="#content3">Rectangle 3</a></li>
+                    <li><a href="#content1">Beef</a></li>
+                    <li><a href="#content2">Chicken</a></li>
+                    <li><a href="#content3">Sushi</a></li>
                 </ul>
             </div>
         </nav>
