--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 </a>
             </div>
             <div class="dropdown-container">
-                <button class="dropdown-button">Button</button>
+                <button class="dropdown-button">Our Menu</button>
                 <ul class="dropdown-menu">
                     <li><a href="#content1">Beef</a></li>
                     <li><a href="#content2">Chicken</a></li>
