--- a/index.html
+++ b/index.html
@@ -264,17 +264,17 @@
 
     <!-- Dropdown content sections -->
     <div id="content1" class="dropdown-content">
-        <h3>Rectangle 1</h3>
+        <h3>Beef</h3>
         <p>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</p>
     </div>
 
     <div id="content2" class="dropdown-content">
-        <h3>Rectangle 2</h3>
+        <h3>Chicken</h3>
         <p>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</p>
     </div>
 
     <div id="content3" class="dropdown-content">
-        <h3>Rectangle 3 Content</h3>
+        <h3>Sushi</h3>
         <p>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT</p>
     </div>
 </body>
