--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
             border-top: 1px solid #ddd;
         }
 
+        .dropdown-content h3 {
+            text-align: center;
+        }
+
         @media (min-width: 768px) {
             .dropdown-container {
                 display: none;
@@ -163,6 +167,8 @@
                 display: inline-block;
             }
         }
+
+        
 
         .container {
             width: 100%;
